force-app/main/default/objects/Credit_Application__c/Credit_Application__c.object-meta.xml
<CustomObject>
    <description>When a customer fills out a credit app via Form Assembly, their responses will be saved on this object</description>
    <label>Credit Application</label>
    <nameField>
        <label>Credit Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>