force-app/main/default/objects/Credit_Application__c/fields/A_P_Contact__c.field-meta.xml
<CustomField>
    <fullName>A_P_Contact__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>A/P Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>