force-app/main/default/objects/Credit_Application__c/fields/A_P_Email__c.field-meta.xml
<CustomField>
    <fullName>A_P_Email__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>A/P Email</label>
    <type>Email</type>
</CustomField>