force-app/main/default/objects/Credit_Application__c/fields/Back_Orders_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Back_Orders_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Credit Application filled out by customer</description>
    <label>Back Orders Accepted</label>
    <type>Checkbox</type>
</CustomField>