force-app/main/default/objects/Credit_Application__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>