force-app/main/default/objects/Credit_Application__c/fields/Bank_City__c.field-meta.xml
<CustomField>
    <fullName>Bank_City__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>