force-app/main/default/objects/Credit_Application__c/fields/Bank_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Bank_Contact_Email__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank Contact Email</label>
    <type>Email</type>
</CustomField>