force-app/main/default/objects/Credit_Application__c/fields/Bank_Fax__c.field-meta.xml
<CustomField>
    <fullName>Bank_Fax__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank Fax</label>
    <type>Phone</type>
</CustomField>