force-app/main/default/objects/Credit_Application__c/fields/Bank_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Phone__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank Phone</label>
    <type>Phone</type>
</CustomField>