force-app/main/default/objects/Credit_Application__c/fields/Bank_State__c.field-meta.xml
<CustomField>
    <fullName>Bank_State__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>