force-app/main/default/objects/Credit_Application__c/fields/Bank_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bank_Zip__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Bank Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>