force-app/main/default/objects/Credit_Application__c/fields/Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Phone__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Billing Phone</label>
    <type>Phone</type>
</CustomField>