force-app/main/default/objects/Credit_Application__c/fields/Credit_Action_for_Setup__c.field-meta.xml
<CustomField>
    <fullName>Credit_Action_for_Setup__c</fullName>
    <description>Formula to grab field from Account for displaying on Credit App object
01 - Credit App is needed
02 - Bill To setup needed
03 - Ship To setup needed
04 - National account - must be handled by NAM team, send email to that box
05 - Other - Email generated to both Rep and the credit group mailbox containing all the details</description>
    <formula>TEXT(Account__r.Credit_Action_for_Setup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>01 - Credit App is needed
02 - Bill To setup needed
03 - Ship To setup needed
04 - National account - must be handled by NAM team, send email to that box
05 - Other - Email generated to both Rep and the credit group mailbox containing all the details</inlineHelpText>
    <label>Credit - Action for Setup</label>
    <type>Text</type>
</CustomField>