force-app/main/default/objects/Credit_Application__c/fields/Credit_Action_from_Credit_Dept__c.field-meta.xml
<CustomField>
    <fullName>Credit_Action_from_Credit_Dept__c</fullName>
    <formula>Text(Account__r.Credit_Action_from_Credit_Dept__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit - Action from Credit Dept</label>
    <type>Text</type>
</CustomField>