force-app/main/default/objects/Credit_Application__c/fields/Credit_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Credit_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the person that originally initiated the Customer Setup on the Account</description>
    <label>Credit Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>