force-app/main/default/objects/Credit_Application__c/fields/Delivery_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Email_Address__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Delivery Email Address</label>
    <type>Email</type>
</CustomField>