force-app/main/default/objects/Credit_Application__c/fields/Domestic_Duns_from_Form__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Duns_from_Form__c</fullName>
    <description>Form Assembly will push the domestic DUNs to this object</description>
    <label>Domestic Duns from Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>