force-app/main/default/objects/Credit_Application__c/fields/Federal_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_ID_Number__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Federal ID Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>