force-app/main/default/objects/Credit_Application__c/fields/Global_Duns_from_Form__c.field-meta.xml
<CustomField>
    <fullName>Global_Duns_from_Form__c</fullName>
    <description>Form Assembly will push the Global Duns number from the Form onto this object</description>
    <label>Global Duns from Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>