force-app/main/default/objects/Credit_Application__c/fields/Invoice_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Requirements__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Invoice Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One invoice per shipment</fullName>
            </value>
            <value>
                <fullName>One invoice per purchase order</fullName>
            </value>
            <value>
                <fullName>Periodic summary billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>