force-app/main/default/objects/Credit_Application__c/fields/Method_of_Invoice_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Invoice_Delivery__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Method of Invoice Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>