force-app/main/default/objects/Credit_Application__c/fields/Monthly_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credit_Limit__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Monthly Credit Limit - old</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>