force-app/main/default/objects/Credit_Application__c/fields/Monthly_Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credit_Limit_Currency__c</fullName>
    <label>Monthly Credit Limit currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>