force-app/main/default/objects/Credit_Application__c/fields/Portal_Website_Address__c.field-meta.xml
<CustomField>
    <fullName>Portal_Website_Address__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Portal Website Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>