force-app/main/default/objects/Credit_Application__c/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>From Credit Application filled out by customer</description>
    <label>Purchase Order Required</label>
    <type>Checkbox</type>
</CustomField>