force-app/main/default/objects/Credit_Application__c/fields/Resend_Credit_Application__c.field-meta.xml
<CustomField>
    <fullName>Resend_Credit_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets unchecked in the trigger.</description>
    <inlineHelpText>Check this field if the credit app needs to be resent.</inlineHelpText>
    <label>Resend Credit Application</label>
    <type>Checkbox</type>
</CustomField>