force-app/main/default/objects/Credit_Application__c/fields/Response_code__c.field-meta.xml
<CustomField>
    <fullName>Response_code__c</fullName>
    <label>Response code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>