force-app/main/default/objects/Credit_Application__c/fields/Shipto_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Phone__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Shipto Phone</label>
    <type>Phone</type>
</CustomField>