force-app/main/default/objects/Credit_Application__c/fields/Shipto_Postal_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Postal_Zip__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Shipto Postal/Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>