force-app/main/default/objects/Credit_Application__c/fields/Shipto_State__c.field-meta.xml
<CustomField>
    <fullName>Shipto_State__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Shipto State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>