force-app/main/default/objects/Credit_Application__c/fields/Shipto_Street2__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Street2__c</fullName>
    <description>Shipto_Street__c</description>
    <label>Shipto Street2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>