force-app/main/default/objects/Credit_Application__c/fields/Shipto_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipto_Street__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Shipto Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>