force-app/main/default/objects/Credit_Application__c/fields/Tax_Dept_Email__c.field-meta.xml
<CustomField>
    <fullName>Tax_Dept_Email__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Tax Dept Email</label>
    <type>Email</type>
</CustomField>