force-app/main/default/objects/Credit_Application__c/fields/Tax_Exempt_Other__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Other__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Tax Exempt Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>