force-app/main/default/objects/Credit_Application__c/fields/Tax_Exempt_Products__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Products__c</fullName>
    <label>Tax Exempt Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print/Paper</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Facility Supplies</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>