force-app/main/default/objects/Credit_Application__c/fields/Tax_Exempt_States__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_States__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Tax Exempt States</label>
    <type>TextArea</type>
</CustomField>