force-app/main/default/objects/Credit_Application__c/fields/Tax_Exempt_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Type__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Tax Exempt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Exempt Entity</fullName>
            </value>
            <value>
                <fullName>Direct Pay Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>