force-app/main/default/objects/Credit_Application__c/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Taxable</fullName>
            </value>
            <value>
                <fullName>State Exempt - NH, OR, MT, DE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>