force-app/main/default/objects/Credit_Application__c/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <description>Customer will select from this drop down when they fill out the credit application.  This field will be sent to IT via ESB and included on the IT email that is sent to Credit team</description>
    <label>Type of Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Line</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash in Advance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>