force-app/main/default/objects/Credit_Application__c/fields/W_9__c.field-meta.xml
<CustomField>
    <fullName>W_9__c</fullName>
    <description>From Credit Application filled out by customer</description>
    <label>W-9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>